# mimiclaw

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_JA.md  check_env.sh  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/: settings.local.json
.github/workflows/: release.yml
components/lua/: CMakeLists.txt  download_lua.ps1  download_lua.sh
docs/: ARCHITECTURE.md  LOCAL_MODEL_CN.md  TODO.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example  system_manager.c  system_manager.h
main/agent/: agent_loop.c  agent_loop.h  context_builder.c  mcp_client.c  mcp_client.h  mcp_manager.c  mcp_manager.h
main/audio/: asr_client.c  asr_client.h  audio.c  audio.h  audio_manager.c  audio_manager.h  tts_client.c  tts_client.h  voice_manager.c  voice_manager.h
main/bus/: message_bus.c  message_bus.h
main/buttons/: button_driver.c  button_driver.h
main/cli/: serial_cli.c
main/component/: component_auto_detect.c  component_auto_detect.h  component_mgr.c  component_mgr.h
main/cron/: cron_service.c
main/crypto/: ed25519_verify.c  ed25519_verify.h
main/discovery/: mdns_service.c  mdns_service.h  ssdp_service.c  ssdp_service.h
main/display/: display.c  ssd1306.c  ssd1306.h
main/extensions/: ha_integration.c  ha_integration.h  mqtt_manager.c  mqtt_manager.h  zigbee_gateway.c  zigbee_gateway.h
main/federation/: federation_api.c  federation_api.h  peer_control.c  peer_control.h  peer_manager.c  peer_manager.h
main/gateway/: ws_server.c
main/heartbeat/: heartbeat.c  heartbeat.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: session_mgr.c
main/ota/: ota_manager.c  ota_manager.h
main/rgb/: rgb.c  rgb.h
main/skills/: api_skill.c  api_skill.h  board_profile.c  board_profile.h  skill_engine.c  skill_engine.h  skill_hw_api.c  skill_hw_api.h  skill_quota.c  skill_quota.h  skill_rate_limit.c  skill_rate_limit.h  skill_resource_manager.c  skill_resource_manager.h  skill_rollback.c  skill_rollback.h  skill_runtime.h  skill_types.h
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: api_manager.c  api_manager.h  tool_audio.c  tool_audio.h  tool_files.c  tool_get_time.c  tool_get_time.h  tool_hardware.c  tool_hardware.h  tool_mcp.c  tool_mcp.h  tool_network.c  tool_network.h  tool_registry.c  tool_registry.h  tool_skill_create.c  tool_skill_create.h  tool_skill_manage.c  tool_skill_manage.h  tool_voice.c  tool_voice.h  tool_zigbee.c  tool_zigbee.h
main/ui/: config_screen.c
main/web_ui/: web_ui.c  web_ui.h
main/wifi/: wifi_manager.c
spiffs_data/config/: SOUL.md  board_profile.json  components.json
spiffs_data/memory/: MEMORY.md
spiffs_data/skills/: example_gpio.lua
spiffs_data/skills/.t/: gpio_control.tmpl  i2c_sensor.tmpl  timer_service.tmpl
spiffs_data/skills/.templates/: i2c_sensor.lua.tmpl  timer_service.lua.tmpl
